<resources>
    <string name="privacy_category">حریم خصوصی</string>

    <string name="hide_read_receipts">مخفی کردن تیک دوم (خوانده شدن پیام)</string>
    <string name="hide_typing_status">مخفی کردن وضعیت تایپ (Typing…)</string>
    <string name="hide_online_status">مخفی کردن وضعیت آنلاین</string>
    <string name="show_deleted_messages">نمایش پیام‌های حذف‌شده</string>
    <string name="hide_story_view_status">مخفی کردن مشاهده استوری</string>
    <string name="remove_forward_quote">حذف نقل قول پیام فورواردشده</string>
</resources>
